# MPI_force_calcuator

./: .gitignore  CMakeLists.txt  README.md  build.sh  compare_modes.sh  main.cpp  test_mode3.sh
src/: calculate.h  particle.cpp  particle.h
src/csv/: csv_reader.cpp  csv_reader.h
src/even_threads/: even_dispatcher.h
src/mpi/: mpi_dispatcher.cpp  mpi_dispatcher.h  mpi_worker.h  tag.h
src/queue/: queue_dispatcher.h
src/serial/: serial.cpp  serial.h
src/utils/: utils.cpp  utils.h
